--- a/.harness/signartifactsbom.yaml
+++ b/.harness/signartifactsbom.yaml
@@ -52,7 +52,7 @@ pipeline:
                         cpu: "0.5"
           platform:
             os: Linux
-            arch: Arm64
+            arch: Amd64
           runtime:
             type: Cloud
             spec: {}
