Update pipeline sign-artifact-sbom

--- a/.harness/signartifactsbom.yaml
+++ b/.harness/signartifactsbom.yaml
@@ -33,7 +33,7 @@ pipeline:
                     tool:
                       type: Syft
                       spec:
-                        format: spdx-json
+                        format: cyclonedx-json
                     source:
                       type: docker
                       spec:
